Started writing the real README for the project.